1.6.0 (trunk):
* Remove `Uri_IP` module, superseded by the `ipaddr` package (#30).
* Do not depend on `camlp4` for link-time, only compile time (#39).

1.5.0 (2014-03-24):
* Make library POSIX thread-safe by removing dependency on `Re_str`.
* Add Merlin IDE configuration.

1.4.0 (2014-02-16):
* Fix path and path_and_query encoding bugs (#35).
* Fix userinfo percent-encoding/delimiter bug (#35).
* Add optional scheme parameter to encoding_of_query.

1.3.13 (2014-01-16):
* Remove internal use of Scanf.
* Expose `with sexp` for the Uri types.

1.3.12 (2013-12-28):
* Be lenient about decoding incorrect encoded percent-strings (#31).
* Improve ocamldoc for `Uri.of_string`.
* Regenerate build files with OASIS 0.4.1.
* Add an `mldylib` to build the cmxs Natdynlink plugin properly (#29).

1.3.11 (2013-10-13):
* Add relative-relative URI resolution support.
* OCamldoc fixes.
* Add Travis continous build tests.

1.3.10 (2013-09-05):
* Rename `Install_printer` to `Uri_top` to prevent conflict with other libraries with similar name (#24).

1.3.9 (2013-08-30):
* Add back support for OCaml 3.12.1 by fixing the compiler-libs linking.

1.3.8 (2013-05-19):
* Add `Uri.get_query_param` which selects a single value for a query key.
* Add `Uri.get_query_param'` which returns a list of values associated with a query key.
* Fix ocamldoc in `Uri` module to have a header.

1.3.7 (2013-01-23):
* Add a top-level printer for `Uri.t` that converts it to a string instead
  of just displaying an `<abstract>` type.

1.3.6 (2012-12-29):
* Add `with_host`, `with_port`, `with_fragment` and `with_host`, to modify
  the respective fields of an input URI.

1.3.5 (2012-12-19):
* Fix percent encoding of characters from 0x0 to 0xf.
* Add `Uri.remove_query_param` function to remove keys from query sets.

1.3.4 (2012-11-08):
* Always encode `+` in URLs to be more compatible with form encoding.

1.3.3 (2012-10-14):
* Add singleton variants of query functions that accept a string->string